# Rapid-CDH-OLD

./: .gitignore  Makefile  README.md  Toolchain-rpi.cmake  build-rpi.sh  build.sh  setup-rpi.sh  setup.sh
docs/: datasheets.md  rpi-cross-compile.md  rpi-headless-setup.md  rpi-serial-setup.md  sensorclasses.md
src/: CMakeLists.txt  globals.h  main.cpp
src/error/: CMakeLists.txt  UCamIIIException.cpp  UCamIIIException.h  WiringPiException.h
src/handlers/: CMakeLists.txt  CommandHandler.cpp  CommandHandler.hpp  TelemetryHandler.cpp  TelemetryHandler.hpp
src/scheduler/: CMakeLists.txt  CommandScheduler.cpp  CommandScheduler.h
src/sensors/: ADS7828.cpp  ADS7828.h  CMakeLists.txt  INA219.cpp  INA219.h  INA260.cpp  INA260.h  LSM6DS33.cpp  LSM6DS33.h  PPG102A6.cpp  PPG102A6.h  Sensor.cpp  Sensor.h  TMP36.cpp  TMP36.h  UCamIII.cpp  UCamIII.h  UM7.cpp  UM7.h  ina219.h  ina260.cpp  ina260.h  lsm6ds33.cpp  lsm6ds33.h  sensor.cpp  sensor.h  ucam_iii.cpp  ucam_iii.h
src/util/: CMakeLists.txt  Result.hpp
watchdog/: watchdog.ino
